# closure-templates

java/src/com/google/template/soy/: BUILD.bazel  SoyParseInfoGenerator.java
java/src/com/google/template/soy/base/: BUILD.bazel
java/src/com/google/template/soy/base/internal/: BUILD.bazel
java/src/com/google/template/soy/basetree/: BUILD.bazel
java/src/com/google/template/soy/error/: BUILD.bazel
java/src/com/google/template/soy/internal/base/: BUILD.bazel
java/src/com/google/template/soy/internal/proto/: BUILD.bazel
java/src/com/google/template/soy/internal/targetexpr/: BUILD.bazel
java/src/com/google/template/soy/parseinfo/passes/: GenerateParseInfoVisitor.java
java/src/com/google/template/soy/plugin/restricted/: BUILD.bazel
java/src/com/google/template/soy/shared/internal/gencode/: GeneratedFile.java
src/main/protobuf/: BUILD.bazel
