load("@xyz_yannic_rules_javacc//javacc:defs.bzl", "javacc_java_library")

# TODO(yannic): Split into smaller libraries.
javacc_java_library(
    name = "soy",
    srcs = glob([
        "**/*.java",
        "**/*.jj",
    ]),
    deps = [
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/base/internal",
        "//java/src/com/google/template/soy/basetree",
        "//java/src/com/google/template/soy/error",
        "//java/src/com/google/template/soy/internal/base",
        "//java/src/com/google/template/soy/internal/proto",
        "//java/src/com/google/template/soy/internal/targetexpr",
        "//java/src/com/google/template/soy/plugin/restricted",
        "//src/main/protobuf:conformance_java_proto",
        "//src/main/protobuf:logging_config_java_proto",
        "//src/main/protobuf:template_metadata_java_proto",
        "@com_google_guava//guava",
        "@args4j",
        "@com_google_auto_value//jar",
        "@com_google_code_gson",
        "@com_google_common_html_types",
        "@com_google_errorprone_error_prone_annotations//jar",
        "@com_google_inject_extensions_guice_multibindings",
        "@com_google_inject_guice",
        "@com_google_protobuf//:protobuf_java",
        "@com_ibm_icu_icu4j",
        "@error_prone_annotations//jar",
        "@javax_annotation_jsr250_api",
        "@javax_inject",
        "@jsr305//jar",
        "@org_apache_ant//jar",
        "@org_json//jar",
        "@org_ow2_asm//jar",
        "@org_ow2_asm_analysis//jar",
        "@org_ow2_asm_commons//jar",
        "@org_ow2_asm_tree//jar",
        "@org_ow2_asm_util//jar",
    ],
)
