load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "base",
    srcs = [
        "SourceLocation.java",
        "SoyBackendKind.java",
    ],
    visibility = [
        "//java/src/com/google/template/soy:__pkg__",
        "//java/src/com/google/template/soy/base/internal:__pkg__",
        "//java/src/com/google/template/soy/basetree:__pkg__",
        "//java/src/com/google/template/soy/error:__pkg__",
    ],
    deps = [
        "@com_google_guava//guava",
        "@com_google_auto_value//jar",
        "@error_prone_annotations//jar",
        "@javax_annotation_jsr250_api//jar",
        "@jsr305//jar",
    ],
)
