load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "base",
    srcs = glob([
        "**/*.java",
    ]),
    javacopts = [
        # TODO(yannic): Remove.
        "-XepAllErrorsAsWarnings",
    ],
    visibility = [
        "//java/src/com/google/template/soy:__subpackages__",
    ],
    deps = [
        "@com_google_guava//guava",
        "@com_google_auto_value//jar",
        "@error_prone_annotations//jar",
        "@javax_annotation_jsr250_api//jar",
        "@jsr305//jar",
    ],
)
