load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "internal",
    srcs = [
        "AbstractSoyFileSupplier.java",
        "BaseUtils.java",
        "FixedIdGenerator.java",
        "IdGenerator.java",
        "Identifier.java",
        "IncrementingIdGenerator.java",
        "IndentedLinesBuilder.java",
        "QuoteStyle.java",
        "SanitizedContentKind.java",
        "SoyFileKind.java",
        "SoyFileSupplier.java",
        "SoyJarFileWriter.java",
        "StableSoyFileSupplier.java",
        "TriState.java",
        "UniqueNameGenerator.java",
        "VolatileSoyFileSupplier.java",
    ],
    javacopts = [
        # TODO(yannic): Remove.
        "-XepAllErrorsAsWarnings",
    ],
    visibility = [
        "//java/src/com/google/template/soy:__pkg__",
        "//java/src/com/google/template/soy/error:__pkg__",
    ],
    deps = [
        "//java/src/com/google/template/soy/base",
        "@com_google_guava//guava",
        "@com_google_auto_value//jar",
        "@error_prone_annotations//jar",
    ],
)
